# auto-check-in

./: .gitignore  README.md  checkin.py  pyproject.toml  run.ps1
.github/workflows/: checkin.yml  cloud-checkin.yml
scripts/: anyrouter_local_checkin.py  api_sites_checkin.py  bmapi_checkin.py
tests/: test_anyrouter_local_checkin.py
utils/: config.py
