[project]
name = "auto-check-in"
version = "0.1.0"
description = "Personal automatic check-in scripts"
requires-python = ">=3.11"
dependencies = [
  "httpx[http2]>=0.28.0",
  "playwright>=1.60.0",
]

[dependency-groups]
dev = [
  "pytest>=9.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["-q"]
